Before fix: overflowing footer issue

--- a/Manage Landing Page/style.css
+++ b/Manage Landing Page/style.css
@@ -69,7 +69,7 @@
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role="list"],
-ol[role="list"] {
+ol[role="list"] { 
   list-style: none;
 }
 
@@ -218,18 +218,26 @@ p[data-width="wide"] {
 }
 
 .numbered-items div {
+  overflow: hidden;
   display: grid;
+  position: relative;
   align-items: center;
-  column-gap: var(--size-400);
+  column-gap: var(--size-300);
   grid-template-columns: min-content 1fr;
 }
 
-.numbered-items p {
+.numbered-items__title {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+  line-height: 1;
+}
+
+.numbered-items__body {
   grid-column: 1 / -1;
 }
 
-@media (min-width: 50em) {
-  .numbered-items p {
+@media (min-width: 30em) {
+  .numbered-items__body {
     grid-column: 2 / -1;
   }
 }
@@ -239,7 +247,24 @@ p[data-width="wide"] {
   background-color: var(--clr-accent-400);
   color: var(--clr-neutral-100);
   font-weight: var(--fw-bold);
-  padding: var(--size-200) var(--size-500);
+  padding: 0 var(--size-500);
+  height: 40px;
+  display: flex;
+  align-items: center;
+  border-radius: 100vw;
+  grid-row: 1 / 2;
+  grid-column: 1 / 1;
+}
+
+.numbered-items div::after {
+  content: "";
+  display: block;
+  z-index: -1;
+  inset: 0 -100vw 0 0;
+  grid-column: 1 / -1;
+  grid-row: 1 / 2;
+  background: orange;
+  height: 40px;
   border-radius: 100vw;
 }
 
@@ -556,3 +581,14 @@ input:where([type="text"], [type="email"], ) {
     display: inline-flex;
   }
 }
+
+* {
+  border: 1px solid red;
+}
+
+@media (max-width: 50em) {
+  .footer-nav {
+    columns: 1;
+  }
+}
+
